# getsnapback

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
references/: snapchat_to_photos.sh
scripts/dmg/: Ouvrir Snap Date Fixer.command
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: BINARIES.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/processor/: date.rs  dedup.rs  error.rs  mod.rs  overlay_img.rs  overlay_vid.rs  scan.rs  sidecar.rs  video_encoder.rs
src/lib/: format.js  i18n.js  version.js
src/screens/: Progress.svelte  Summary.svelte  Welcome.svelte
website/: .gitignore  package-lock.json  package.json
website/public/: llms.txt  sitemap.xml
website/src/app/: Site.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
website/src/app/api/revalidate/: route.ts
website/src/app/components/: AppDemo.tsx  AppPreview.tsx  DownloadButtons.tsx  Icons.tsx  MemoriesCollage.tsx  Reveal.tsx
website/src/app/lib/: i18n.tsx
website/src/lib/: release.ts
