[package]
name = "getsnapback"
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/evanbnm/getsnapback"

[lib]
name = "getsnapback_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "getsnapback"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
hex        = "0.4"
chrono     = { version = "0.4", features = ["serde"] }
image      = { version = "0.25", features = ["jpeg", "png", "webp"] }
walkdir    = "2"
tempfile   = "3"
zip        = "2"
thiserror  = "1"
log        = "0.4"
env_logger = "0.11"

[profile.release]
opt-level  = 3
lto        = true
strip      = true
